--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>AdminLV - VueJs Starter Admin Template with Laravel 8</title>
+	<title>Vadmin - VueJs Starter Admin Template with Laravel 8</title>
 
 	<meta name="description" content="">
 	<meta name="author" content="Sangib Kumar Saha">
@@ -88,7 +88,7 @@
 	</div>
 	<div id="documenter_content">
 	<section id="documenter_cover">
-	<h1>AdminLV</h1>
+	<h1>Vadmin</h1>
 	<h2>VueJs Starter Admin Template with Laravel 8</h2>
 	<div id="documenter_buttons">
 		
@@ -107,7 +107,7 @@
 	<section id="project_description">
 	<div class="page-header"><h3>Project description</h3><hr class="notop"></div>
 <p>
-	If you are looking for a SPA admin template for your upcoming project then probably you come to the right place. AdminLV is a single page admin template developed by Vue.js with Laravel 8 API.It&#39;s covered most common features that you need to start a project.</p>
+	If you are looking for a SPA admin template for your upcoming project then probably you come to the right place. Vadmin is a single page admin template developed by Vue.js with Laravel 8 API.It&#39;s covered most common features that you need to start a project.</p>
 <div>
 	&nbsp;</div>
 <div>
@@ -156,7 +156,7 @@
 <ul>
 	<li>
 		<p>
-			Open Mysql DB and create a new database and named it adminlv-db.</p>
+			Open Mysql Server and create a new database and named it adminlv-db.</p>
 	</li>
 	<li>
 		<p>
