--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	</li>
 	<li>
 		<p>
-			Open AdminApi project on editor and open .env file. you will see DB_DATABASE name set as adminlv-db.you can change the database name from here and if you want to change the DB_USERNAME and DB_PASSWORD, change those from here.</p>
+			Open AdminApi project on editor and open .env file. you will see DB_DATABASE name set as admindb.you can change the database name from here and if you want to change the DB_USERNAME and DB_PASSWORD, change those from here.</p>
 	</li>
 </ul>
 <pre class="prettyprint lang-php linenums">
